# robotics-project

./: CMakeLists.txt  README.md  main.cpp
include/algorithm/: astar.h  flock.h
include/shapes/: asteroid.h  boid.h  box.h  bullet.h  collectible.h  cylinder.h  obstacle.h  planet.h  player.h  space.h  sphere.h  sun.h
include/utils/: camera.h  generation.h  kdtree.h  m_shader.h  model.h  scene.h  sound.h  timer.h
kdtree-test-scene/: CMakeLists.txt  kdtree.cpp
lib/shapes/: asteroid.cpp  boid.cpp  box.cpp  bullet.cpp  collectible.cpp  cylinder.cpp  planet.cpp  player.cpp  space.cpp  sphere.cpp  sun.cpp
lib/utils/: generation.cpp  kdtree.cpp
shaders/: 1.light_cube.vs  3.2.2.point_shadows.fs  boid.fs  shadow.fs  shadow.vs  skybox.fs  skybox.vs  sun.fs  sun.vs  texture.vs
